bodega and h1 shadow

--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
 
     <title>Contactanos</title>
 </head>
-<body>
+<body id="contacto">
     <header>
         <div class="titulo">
             <h1 id="top">Altos Viñedos</h1>
