--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     <title>Altos Viñedos - Las mejores bodegas de Calafate y Tafi del valle</title>
 </head>
-<body class="inicio">
+<body id="inicio">
     <header>
         <div class="titulo">
-            <h1 id="top">Altos Viñedos</h1>
+            <h1 id="top" class="printers">Altos Viñedos</h1>
             <svg width="322" height="66" viewBox="0 0 322 66" fill="none" preserveAspectRatio=none xmlns="http://www.w3.org/2000/svg"><!--preserveAspectRatio para modificar-->
                 <path d="M1.5 1.5H320.044L303.133 64.5H1.5V1.5Z" stroke="#085BBA" stroke-width="3"/>
             </svg>
@@ -51,7 +51,7 @@
             <li class="menu"><a class="menu__text menu__text--meddium" href="tienda.html">Tienda</a></li>
         </ul>
     </nav>
-    <main class="inicio">
+    <main>
         <h3>wine quotes:</h3>
         <div class="grid-container">
             <div class="box--img img--one"><img src="img/vinos/maja-petric-vGQ49l9I4EE-unsplash.jpg" alt=""></div>
