--- a/nuestras-bodegas.html
+++ b/nuestras-bodegas.html
@@ -10,10 +10,10 @@
 
     <title>Nuestras Bodegas</title>
 </head>
-<body>
+<body id="bodegas">
     <header>
         <div class="titulo">
-            <h1 id="top">Altos Viñedos</h1>
+            <h1 id="top" class="printers">Altos Viñedos</h1>
             <svg width="322" height="66" viewBox="0 0 322 66" fill="none" preserveAspectRatio=none xmlns="http://www.w3.org/2000/svg"><!--preserveAspectRatio para modificar-->
                 <path d="M1.5 1.5H320.044L303.133 64.5H1.5V1.5Z" stroke="#085BBA" stroke-width="3"/>
             </svg>
@@ -48,7 +48,8 @@
             <li class="menu"><a class="menu__text menu__text--meddium" href="tienda.html">Tienda</a></li>
         </ul>
     </nav>
-    <main class="bodegas">
+    <main>
+        
         <article class="caja--bodegas">
             <div class="texto">
                 <h2>Bodega Norton</h2>
