--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -10,7 +10,7 @@
 
     <title>Quienes somos</title>
 </head>
-<body>
+<body id="who">
     <header>
         <div class="titulo">
             <h1 id="top">Altos Viñedos</h1>
