--- a/tienda.html
+++ b/tienda.html
@@ -10,7 +10,7 @@
 
     <title>Tienda</title>
 </head>
-<body>
+<body id="tienda">
     <header>
         <div class="titulo">
             <h1 id="top">Altos Viñedos</h1>
