--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -49,7 +49,7 @@
         </ul>
     </nav>
 
-    <main class="who">
+    <main>
         <article class="caja caja--izquierda">
             <img class="caja__img caja__img--izquierda img--shadow" src="img/vinos/francisco-deane-l-rWSPQr9xo-unsplash.jpg" alt="Vinos argentinos">
             <div class="texto">
@@ -80,11 +80,6 @@
             </div>
         </article>
     </main>
-
-
-
-
-
     
 </body>
 </html>
