--- a/index.html
+++ b/index.html
@@ -61,6 +61,48 @@
             </ul>
         </nav>
         <main>
+            <h1>Flickity - lazyLoad</h1>
+
+            <div class="carousel"
+            data-flickity='{ "lazyLoad": true }'>
+            <div class="carousel-cell">
+                <img class="carousel-cell-image"
+                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/tulip.jpg" alt="tulip" />
+            </div>
+            <div class="carousel-cell">
+                <img class="carousel-cell-image"
+                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/grapes.jpg" alt="grapes" />
+            </div>
+            <div class="carousel-cell">
+                <img class="carousel-cell-image"
+                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/raspberries.jpg" alt="raspberries" />
+            </div>
+            <div class="carousel-cell">
+                <img class="carousel-cell-image"
+                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/wolf.jpg" alt="wolf" />
+            </div>
+            <div class="carousel-cell">
+                <img class="carousel-cell-image"
+                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/shore.jpg" alt="sea" />
+            </div>
+            <div class="carousel-cell">
+                <img class="carousel-cell-image"
+                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/leaf-droplets.jpg" alt="leaf droplets" />
+            </div>
+            <div class="carousel-cell">
+                <img class="carousel-cell-image"
+                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/gulls.jpg" alt="gulls" />
+            </div>
+            <div class="carousel-cell">
+                <img class="carousel-cell-image"
+                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/touch-screen.jpg" alt="touch screen" />
+            </div>
+            <div class="carousel-cell">
+                <img class="carousel-cell-image"
+                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/van.jpg" alt="van" />
+            </div>
+            </div>
+
             <h3>wine quotes:</h3>
             <div class="grid-container">
                 <div class="box--img img--one"><img src="img/vinos/maja-petric-vGQ49l9I4EE-unsplash.jpg" alt=""></div>
@@ -72,8 +114,10 @@
                 <div class="box--img img--two"><img src="img/vinos/oscar-soderlund-gogw9vATM-Q-unsplash.jpg" alt=""></div>
                 <div class="box--img img--three"><img src="img/vinos/alasdair-elmes-QTgOjDCiJEo-unsplash.jpg" alt=""></div>
                 <div class="box--img img--four"><img src="img/vinos/yogendra-singh-SJIJ5LQly90-unsplash.jpg" alt=""></div>
-            </main>
 
+
+
+            </main>
     </div>
         <footer class="fixed-footer">
             <div>
