--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="/img/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+
     <link rel="stylesheet" href="styles/css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Josefin+Sans&display=swap" rel="stylesheet">
@@ -61,47 +63,38 @@
             </ul>
         </nav>
         <main>
-            <h1>Flickity - lazyLoad</h1>
+          <!--
+            <div class="carousel-productos">
+                <div class="carousel" data-flickity='{ "fullscreen": true, "lazyLoad": 2 }'>
+                    <img class="carousel-image"
+                      data-flickity-lazyload="https://picsum.photos/720/540/?image=517" />
+                    <img class="carousel-image"
+                      data-flickity-lazyload="https://picsum.photos/540/720/?image=696" />
+                    <img class="carousel-image"
+                      data-flickity-lazyload="https://picsum.photos/720/540/?image=56" />
+                    <img class="carousel-image"
+                      data-flickity-lazyload="https://picsum.photos/800/500/?image=1084" />
+                    <img class="carousel-image"
+                      data-flickity-lazyload="https://picsum.photos/720/540/?image=1080" />
+                    <img class="carousel-image"
+                      data-flickity-lazyload="https://picsum.photos/640/640/?image=1074" />
+                    <img class="carousel-image"
+                      data-flickity-lazyload="https://picsum.photos/720/540/?image=1069" />
+                    <img class="carousel-image"
+                      data-flickity-lazyload="https://picsum.photos/800/500/?image=1062" />
+                    <img class="carousel-image"
+                      data-flickity-lazyload="https://picsum.photos/720/540/?image=1002" />
+                    <img class="carousel-image"
+                      data-flickity-lazyload="https://picsum.photos/640/640/?image=935" />
+                    <img class="carousel-image"
+                      data-flickity-lazyload="https://picsum.photos/720/540/?image=855" />
+                    <img class="carousel-image"
+                      data-flickity-lazyload="https://picsum.photos/640/640/?image=824" />
+                </div>
 
-            <div class="carousel"
-            data-flickity='{ "lazyLoad": true }'>
-            <div class="carousel-cell">
-                <img class="carousel-cell-image"
-                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/tulip.jpg" alt="tulip" />
             </div>
-            <div class="carousel-cell">
-                <img class="carousel-cell-image"
-                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/grapes.jpg" alt="grapes" />
-            </div>
-            <div class="carousel-cell">
-                <img class="carousel-cell-image"
-                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/raspberries.jpg" alt="raspberries" />
-            </div>
-            <div class="carousel-cell">
-                <img class="carousel-cell-image"
-                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/wolf.jpg" alt="wolf" />
-            </div>
-            <div class="carousel-cell">
-                <img class="carousel-cell-image"
-                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/shore.jpg" alt="sea" />
-            </div>
-            <div class="carousel-cell">
-                <img class="carousel-cell-image"
-                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/leaf-droplets.jpg" alt="leaf droplets" />
-            </div>
-            <div class="carousel-cell">
-                <img class="carousel-cell-image"
-                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/gulls.jpg" alt="gulls" />
-            </div>
-            <div class="carousel-cell">
-                <img class="carousel-cell-image"
-                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/touch-screen.jpg" alt="touch screen" />
-            </div>
-            <div class="carousel-cell">
-                <img class="carousel-cell-image"
-                data-flickity-lazyload="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/van.jpg" alt="van" />
-            </div>
-            </div>
+          -->
+
 
             <h3>wine quotes:</h3>
             <div class="grid-container">
@@ -129,6 +122,7 @@
                 <img src="img/icons/email.svg" alt="Email">
             </div>
         </footer>
+        <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
 </body>
 </html>
