--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
     <meta name="msapplication-config" content="/img/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-
     <link rel="stylesheet" href="styles/css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Josefin+Sans&display=swap" rel="stylesheet">
-
     <title>Altos Viñedos - Las mejores bodegas de Calafate y Tafi del valle</title>
 </head>
 <body id="inicio">
@@ -32,7 +30,7 @@
                     <path d="M1.5 1.5H320.044L303.133 64.5H1.5V1.5Z" stroke="#085BBA" stroke-width="3"/>
                 </svg>
             </div>
-            <div class="icon--responsive"><!--agregado link y pointer-events para hacer click-->
+            <div class="icon--responsive">
                 <svg width="43" height="55" viewBox="0 0 43 55" fill="none"  pointer-events="bounding-box" xmlns="http://www.w3.org/2000/svg">
                     <a href="#top">
                     <g filter="url(#filter0_d)">
@@ -63,39 +61,6 @@
             </ul>
         </nav>
         <main>
-          <!--
-            <div class="carousel-productos">
-                <div class="carousel" data-flickity='{ "fullscreen": true, "lazyLoad": 2 }'>
-                    <img class="carousel-image"
-                      data-flickity-lazyload="https://picsum.photos/720/540/?image=517" />
-                    <img class="carousel-image"
-                      data-flickity-lazyload="https://picsum.photos/540/720/?image=696" />
-                    <img class="carousel-image"
-                      data-flickity-lazyload="https://picsum.photos/720/540/?image=56" />
-                    <img class="carousel-image"
-                      data-flickity-lazyload="https://picsum.photos/800/500/?image=1084" />
-                    <img class="carousel-image"
-                      data-flickity-lazyload="https://picsum.photos/720/540/?image=1080" />
-                    <img class="carousel-image"
-                      data-flickity-lazyload="https://picsum.photos/640/640/?image=1074" />
-                    <img class="carousel-image"
-                      data-flickity-lazyload="https://picsum.photos/720/540/?image=1069" />
-                    <img class="carousel-image"
-                      data-flickity-lazyload="https://picsum.photos/800/500/?image=1062" />
-                    <img class="carousel-image"
-                      data-flickity-lazyload="https://picsum.photos/720/540/?image=1002" />
-                    <img class="carousel-image"
-                      data-flickity-lazyload="https://picsum.photos/640/640/?image=935" />
-                    <img class="carousel-image"
-                      data-flickity-lazyload="https://picsum.photos/720/540/?image=855" />
-                    <img class="carousel-image"
-                      data-flickity-lazyload="https://picsum.photos/640/640/?image=824" />
-                </div>
-
-            </div>
-          -->
-
-
             <h3>wine quotes:</h3>
             <div class="grid-container">
                 <div class="box--img img--one"><img src="img/vinos/maja-petric-vGQ49l9I4EE-unsplash.jpg" alt=""></div>
