--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         <nav>
             <ul class="nav__menu">
                 <li class="menu"><a class="menu__text menu__text--inicio menu__text--line-through" href="index.html">Inicio</a></li>
-                <li class="menu"><a class="menu__text menu__text--small " href="quienes-somos.html">Quienes somos</a></li>
-                <li class="menu"><a class="menu__text menu__text--small" href="nuestras-bodegas.html">Nuestras Bodegas</a></li>
+                <li class="menu menu--adaptive"><a class="menu__text menu__text--small " href="quienes-somos.html">Quienes somos</a></li>
+                <li class="menu menu--adaptive"><a class="menu__text menu__text--small" href="nuestras-bodegas.html">Nuestras Bodegas</a></li>
                 <li class="menu"><a class="menu__text menu__text--small" href="contacto.html">Contactanos</a></li>
-                <li class="menu"><a class="menu__text menu__text--meddium" href="tienda.html">Tienda</a></li>
+                <li class="menu"><a class="menu__text menu__text--medium" href="tienda.html">Tienda</a></li>
             </ul>
         </nav>
         <main>
