--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -24,12 +24,12 @@
 <body id="who">
     <header>
         <div class="titulo">
-            <h1 id="top">Altos Viñedos</h1>
+            <h1 id="top" class="printers">Altos Viñedos</h1>
             <svg width="322" height="66" viewBox="0 0 322 66" fill="none" preserveAspectRatio=none xmlns="http://www.w3.org/2000/svg"><!--preserveAspectRatio para modificar-->
                 <path d="M1.5 1.5H320.044L303.133 64.5H1.5V1.5Z" stroke="#085BBA" stroke-width="3"/>
             </svg>
         </div>
-        <div class="icon--responsive"><!--agregado link y pointer-events para hacer click-->
+        <div class="icon--responsive">
             <svg width="43" height="55" viewBox="0 0 43 55" fill="none"  pointer-events="bounding-box" xmlns="http://www.w3.org/2000/svg">
                 <a href="#top">
                 <g filter="url(#filter0_d)">
@@ -52,14 +52,14 @@
     </header>
     <nav>
         <ul class="nav__menu">
-            <li class="menu"><a class="menu__text menu__text--inicio" href="index.html">Inicio</a></li>
-            <li class="menu"><a class="menu__text menu__text--small menu__text--line-through" href="quienes-somos.html">Quienes somos</a></li>
-            <li class="menu"><a class="menu__text menu__text--small" href="nuestras-bodegas.html">Nuestras Bodegas</a></li>
+            <li class="menu"><a class="menu__text menu__text--inicio menu__text--line-through" href="index.html">Inicio</a></li>
+            <li class="menu menu--adaptive"><a class="menu__text menu__text--small " href="quienes-somos.html">Quienes somos</a></li>
+            <li class="menu menu--adaptive"><a class="menu__text menu__text--small" href="nuestras-bodegas.html">Nuestras Bodegas</a></li>
             <li class="menu"><a class="menu__text menu__text--small" href="contacto.html">Contactanos</a></li>
-            <li class="menu"><a class="menu__text menu__text--meddium" href="tienda.html">Tienda</a></li>
+            <li class="menu"><a class="menu__text menu__text--medium" href="tienda.html">Tienda</a></li>
         </ul>
     </nav>
-
+    
     <main>
         <article class="caja caja--izquierda">
             <img class="caja__img caja__img--izquierda img--shadow" src="img/vinos/francisco-deane-l-rWSPQr9xo-unsplash.jpg" alt="Vinos argentinos">
