--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
             </main>
     </div>
-        <footer class="fixed-footer">
+        <!--<footer class="fixed-footer">
             <div>
                 <p>Instagram</p>
                 <p>Behance</p>
@@ -87,6 +87,7 @@
                 <img src="img/icons/email.svg" alt="Email">
             </div>
         </footer>
+    -->
         <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
 </body>
