quienes somos fix1

--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -65,7 +65,7 @@
             <img class="caja__img caja__img--izquierda img--shadow" src="img/vinos/francisco-deane-l-rWSPQr9xo-unsplash.jpg" alt="Vinos argentinos">
             <div class="texto">
                 <h2>Porque comprar local?</h2>
-                <p>
+                <p class="texto--article">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tempor tincidunt cras vel at scelerisque sed. Lobortis cursus aenean aliquet id fermentum ante. In diam massa laoreet at pulvinar sed enim. Tellus sit risus, viverra amet pulvinar. <br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tempor tincidunt cras vel at scelerisque sed. Lobortis cursus aenean aliquet id fermentum ante. In diam massa laoreet at pulvinar sed enim. Tellus sit risus, viverra amet pulvinar. <br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tempor tincidunt cras vel at scelerisque sed. Lobortis cursus aenean aliquet id fermentum ante. In diam massa laoreet at pulvinar sed enim. Tellus sit risus, viverra amet pulvinar. <br>
