--- a/tienda.html
+++ b/tienda.html
@@ -59,8 +59,113 @@
             <li class="menu"><a class="menu__text menu__text--medium" href="tienda.html">Tienda</a></li>
         </ul>
     </nav>
+
     <main class="tienda">
         <div class="container">
+            <article>
+                <img src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Second description">
+                <div class="description">
+                    <h2>Gernot Langes</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est consequuntur eum qui officia explicabo, vitae culpa, earum ad dignissimos vero deserunt non cupiditate, nemo ipsa veritatis tempore. Fuga, debitis blanditiis.
+                    </p>
+                </div>
+            </article>
+            <article>
+                <img src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Second description">
+                <div class="description">
+                    <h2>Edición de Lujo by Swarovski</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est consequuntur eum qui officia explicabo, vitae culpa, earum ad dignissimos vero deserunt non cupiditate, nemo ipsa veritatis tempore. Fuga, debitis blanditiis.
+                    </p>
+                </div>
+            </article>
+            <article>
+                <img src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Second description">
+                <div class="description">
+                    <h2>Second description</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est consequuntur eum qui officia explicabo, vitae culpa, earum ad dignissimos vero deserunt non cupiditate, nemo ipsa veritatis tempore. Fuga, debitis blanditiis.
+                    </p>
+                </div>
+            </article>
+            <article>
+                <img src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Second description">
+                <div class="description">
+                    <h2>Second description</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est consequuntur eum qui officia explicabo, vitae culpa, earum ad dignissimos vero deserunt non cupiditate, nemo ipsa veritatis tempore. Fuga, debitis blanditiis.
+                    </p>
+                </div>
+            </article>
+            <article>
+                <img src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Second description">
+                <div class="description">
+                    <h2>Second description</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est consequuntur eum qui officia explicabo, vitae culpa, earum ad dignissimos vero deserunt non cupiditate, nemo ipsa veritatis tempore. Fuga, debitis blanditiis.
+                    </p>
+                </div>
+            </article>
+            <article>
+                <img src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Second description">
+                <div class="description">
+                    <h2>Second description</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est consequuntur eum qui officia explicabo, vitae culpa, earum ad dignissimos vero deserunt non cupiditate, nemo ipsa veritatis tempore. Fuga, debitis blanditiis.
+                    </p>
+                </div>
+            </article>
+            <article>
+                <img src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Second description">
+                <div class="description">
+                    <h2>Second description</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est consequuntur eum qui officia explicabo, vitae culpa, earum ad dignissimos vero deserunt non cupiditate, nemo ipsa veritatis tempore. Fuga, debitis blanditiis.
+                    </p>
+                </div>
+            </article>
+            <article>
+                <img src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Second description">
+                <div class="description">
+                    <h2>Second description</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est consequuntur eum qui officia explicabo, vitae culpa, earum ad dignissimos vero deserunt non cupiditate, nemo ipsa veritatis tempore. Fuga, debitis blanditiis.
+                    </p>
+                </div>
+            </article>
+            <article>
+                <img src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Second description">
+                <div class="description">
+                    <h2>Second description</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est consequuntur eum qui officia explicabo, vitae culpa, earum ad dignissimos vero deserunt non cupiditate, nemo ipsa veritatis tempore. Fuga, debitis blanditiis.
+                    </p>
+                </div>
+            </article>
+            <article>
+                <img src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Second description">
+                <div class="description">
+                    <h2>Second description</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est consequuntur eum qui officia explicabo, vitae culpa, earum ad dignissimos vero deserunt non cupiditate, nemo ipsa veritatis tempore. Fuga, debitis blanditiis.
+                    </p>
+                </div>
+            </article>
+            <article>
+                <img src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Second description">
+                <div class="description">
+                    <h2>Second description</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est consequuntur eum qui officia explicabo, vitae culpa, earum ad dignissimos vero deserunt non cupiditate, nemo ipsa veritatis tempore. Fuga, debitis blanditiis.
+                    </p>
+                </div>
+            </article>
+
+
+
+
+    <!--
             <div class="row">
                 <div class="cards">
                     <article>
@@ -189,6 +294,7 @@
                 </div>
             </div>
         </div>
+    -->
 </main>
 
 
